feat: updated player now imports mux from cloud